Styling, coloring points in challenge view, work on suggesstion